update profile command to work with newer java versions