@@ -8,9 +8,12 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import moira.model.TestCase;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
@@ -22,6 +25,18 @@ public class DefaultServiceProfileTest extends DefaultServiceTest {
   private static final TestCase SOURCE_TWO = TestCase.fromId("com.example.SourceTest[second]");
   private static final TestCase TARGET_ONE = TestCase.fromId("com.example.TargetTest[first]");
   private static final TestCase TARGET_TWO = TestCase.fromId("com.example.TargetTest[second]");
+
+  private String originalJavaVersion;
+
+  @BeforeEach
+  public void saveJavaVersion() {
+    originalJavaVersion = System.getProperty("java.version");
+  }
+
+  @AfterEach
+  public void restoreJavaVersion() {
+    restoreProperty("java.version", originalJavaVersion);
+  }
 
   @Test
   public void testTestSuiteFileInStandardInput() throws IOException {
@@ -39,20 +54,15 @@ public class DefaultServiceProfileTest extends DefaultServiceTest {
 
   @ParameterizedTest
   @EnumSource(Profiler.class)
-  public void testProfilerArguments(final Profiler profiler) throws IOException {
+  public void testProfilerArgumentsJava(final Profiler profiler) throws IOException {
     final MockedExecution[] executions = captureExecutions(1);
 
     service.profile(
         ProfileOptions.builder().withProfiler(profiler).withTestSuite(createTestSuiteFile()));
 
-    final String agent = Agent.path();
-    assertThat(
-        executions[0].getArguments(),
-        contains(
-            "-javaagent:" + agent,
-            "-Xbootclasspath/a:" + agent,
-            "-Dmoira.profiler.name=" + profiler.getProfilerClass(),
-            moira.service.AgentRunner.class.getName()));
+    final List<String> arguments = executions[0].getArguments();
+
+    assertAgentRunnerArguments(arguments, profiler);
   }
 
   @ParameterizedTest
@@ -63,15 +73,10 @@ public class DefaultServiceProfileTest extends DefaultServiceTest {
     service.profile(
         ProfileOptions.builder().withTestSuite(createTestSuiteFile()).withFilter(filter));
 
-    final String agent = Agent.path();
-    assertThat(
-        executions[0].getArguments(),
-        contains(
-            "-javaagent:" + agent,
-            "-Xbootclasspath/a:" + agent,
-            "-Dmoira.profiler.name=" + Profiler.NULL.getProfilerClass(),
-            "-Dmoira.agent.filter=" + filter,
-            moira.service.AgentRunner.class.getName()));
+    final List<String> arguments = executions[0].getArguments();
+
+    assertAgentRunnerArguments(arguments);
+    assertThat(arguments, hasItem("-Dmoira.agent.filter=" + filter));
   }
 
   @ParameterizedTest
@@ -82,15 +87,44 @@ public class DefaultServiceProfileTest extends DefaultServiceTest {
     service.profile(
         ProfileOptions.builder().withTestSuite(createTestSuiteFile()).withSuspend(suspend));
 
-    final String agent = Agent.path();
+    final List<String> arguments = executions[0].getArguments();
+
+    assertAgentRunnerArguments(arguments);
+    assertThat(arguments, hasItem("-Dmoira.agent.suspend=" + suspend));
+  }
+
+  @Test
+  public void testJava8ProfilerArgumentsOmitModuleOpens() throws IOException {
+    System.setProperty("java.version", "1.8.0_382");
+    final MockedExecution[] executions = captureExecutions(1);
+
+    service.profile(ProfileOptions.builder().withTestSuite(createTestSuiteFile()));
+
+    final List<String> arguments = executions[0].getArguments();
+
+    assertAgentRunnerArguments(arguments);
     assertThat(
-        executions[0].getArguments(),
-        contains(
-            "-javaagent:" + agent,
-            "-Xbootclasspath/a:" + agent,
-            "-Dmoira.profiler.name=" + Profiler.NULL.getProfilerClass(),
-            "-Dmoira.agent.suspend=" + suspend,
-            moira.service.AgentRunner.class.getName()));
+        arguments, not(containsInRelativeOrder("--add-opens", "java.base/java.util=ALL-UNNAMED")));
+    assertThat(
+        arguments,
+        not(containsInRelativeOrder("--add-opens", "java.base/sun.security.jca=ALL-UNNAMED")));
+  }
+
+  @Test
+  public void testJava9ProfilerArgumentsIncludeModuleOpens() throws IOException {
+    System.setProperty("java.version", "9.0.4");
+    final MockedExecution[] executions = captureExecutions(1);
+
+    service.profile(ProfileOptions.builder().withTestSuite(createTestSuiteFile()));
+
+    final List<String> arguments = executions[0].getArguments();
+
+    assertAgentRunnerArguments(arguments);
+    assertThat(
+        arguments, containsInRelativeOrder("--add-opens", "java.base/java.util=ALL-UNNAMED"));
+    assertThat(
+        arguments,
+        containsInRelativeOrder("--add-opens", "java.base/sun.security.jca=ALL-UNNAMED"));
   }
 
   @Test
@@ -146,5 +180,26 @@ public class DefaultServiceProfileTest extends DefaultServiceTest {
     Files.write(testsuite.toPath(), Arrays.asList(testClasses));
 
     return testsuite;
+  }
+
+  private static void assertAgentRunnerArguments(
+      final List<String> arguments, final Profiler profiler) {
+    final String agent = Agent.path();
+
+    assertThat(arguments.size(), greaterThan(0));
+    assertThat(arguments, hasItem("-Xss2m"));
+    assertThat(arguments, hasItem("-javaagent:" + agent));
+    assertThat(arguments, hasItem("-Xbootclasspath/a:" + agent));
+    assertThat(arguments, hasItem("-Dmoira.profiler.name=" + profiler.getProfilerClass()));
+    assertThat(arguments.get(arguments.size() - 1), is(moira.service.AgentRunner.class.getName()));
+  }
+
+  private static void assertAgentRunnerArguments(final List<String> arguments) {
+    assertAgentRunnerArguments(arguments, Profiler.NULL);
+  }
+
+  private static void restoreProperty(final String name, final String value) {
+    if (value == null) System.clearProperty(name);
+    else System.setProperty(name, value);
   }
 }
